# visualizer-plugin

./: .gitmodules  CMakeLists.txt
abstraction/: CMakeLists.txt
abstraction/include/visualizer-plugin/abstraction/: gl.hpp  glfw.hpp
test/: CMakeLists.txt
test/shaders/: cube.frag  cube.vert
test/src/: testfile.cpp  testfile_autoload.cpp
test/src/default-renderers/: cube.cpp
